--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
 		"unirest": ">= 0.4.0",
 		"async": ">= 1.2.0",
 		"q": ">= 1.4.1",
-		"moment": ">= 2.10.3"
+		"moment": ">= 2.10.3",
+        "form-data": ">= 0.2.0",
+        "mime": ">= 1.3.4"
+
 	}
 }
