--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"npm": ">= 2.10.1"
 	},
 	"scripts": {
-		"start": "node start.js"
+        "start": "./node_modules/.bin/babel-node --harmony ./babel.js"
 	},
 	"files": [
 		"LICENSE",
@@ -48,7 +48,8 @@
 		"q": ">= 1.4.1",
 		"moment": ">= 2.10.3",
         "form-data": ">= 0.2.0",
-        "mime": ">= 1.3.4"
+        "mime": ">= 1.3.4",
+        "babel": ">= 5.7.4"
 
 	}
 }
